There is outliers cleaning, quped, post stratification. Score is 7

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 version: '3.5'
 services:
-  knrn-questions-nint-system:
+  ab-test-platform:
     build:
       context: .
       dockerfile: Dockerfile
