--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Byte-compiled / optimized / DLL files
 .idea/
+data/
+
 __pycache__/
 *.py[cod]
 *$py.class
@@ -121,7 +123,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
+#.env
 .venv
 env/
 venv/
